# equity-research-agent

./: README.md  content_gen.py  environment.yml  final_decision.json  fundamental_analysis.md  pdf_generator.py  pyproject.toml  report.html  report.md  report_from_md.html  technical_analysis.md  us_market_analysis.md  us_sector_valuation.json
src/stock_advisor/: crew.py  main.py
src/stock_advisor/config/: agents.yaml  tasks.yaml
src/stock_advisor/knowledge/: PE_PB_industry_average_eng.json  PE_PB_industry_average_eng.txt
src/stock_advisor/tools/: custom_tool.py
tests/: donut_test_tool.py  fund_tool_test.py  peer_market_test.py  plot_bar_chart_revenue.py  plot_line_chart.py  price_chart_tool_test.ipynb  ratio_collect_test.py  tech_tool_test.py  us_sector_valuation.json
