[project]
name = "stock_advisor"
version = "0.1.0"
description = "stock_advisor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0",
    "firecrawl-py>=2.7.1",
    "google-generativeai>=0.8.5",
    "yfinance",
]

[project.scripts]
stock_advisor = "stock_advisor.main:run"
run_crew = "stock_advisor.main:run"
train = "stock_advisor.main:train"
replay = "stock_advisor.main:replay"
test = "stock_advisor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
